# sia-local-control-ui

./: DASHBOARD_README.md  README.md  doover_config.json  pyproject.toml  test_dashboard.py
simulators/: app_config.json  docker-compose.yml
src/sia_local_control_ui/: __init__.py  app_config.py  app_state.py  app_ui.py  application.py  dashboard.py
src/sia_local_control_ui/static/css/: dashboard.css
src/sia_local_control_ui/static/js/: dashboard.js
src/sia_local_control_ui/templates/: dashboard.html
tests/: test_imports.py
